# aip-bench

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.proxy  HF_README.md  MANIFEST.in  Makefile  README.md  bench_config.example.yaml  guia-instalacion.html  pyproject.toml
examples/: demo.ipynb
results/: benchmark_results.json  compression_profiles.json  natural_benchmark_results.json  report.html
src/aip_bench/: __init__.py  cache.py  cli.py  compare.py  config.py  datasets.py  evaluator.py  export.py  guard.py  inference.py  logging_utils.py  models.py  pipelines.py  prompts.py  torch_utils.py  viz.py
src/aip_bench/proxy/: __init__.py  accordion.py  cli.py  providers.py  server.py  server_stdlib.py  stats.py
src/aip_bench/proxy/providers/: __init__.py  anthropic.py  base.py  generic.py  openai.py
tests/: test_bench.py  test_proxy.py
