[tool.poetry]
name = "aip-bench-suite"
version = "0.1.0"
description = "Benchmarking suite for LLM hallucination detection, inference efficiency, and QA compression evaluation"
authors = ["Carmen Esteban"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iafiscal1212/aip-bench"
homepage = "https://github.com/iafiscal1212/aip-bench"
keywords = ["benchmarking", "evaluation", "llm", "hallucination-detection", "kv-cache-compression"]
packages = [{include = "aip_bench", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20"
scipy = ">=1.7"

# Extras managed as optional groups
datasets = { version = ">=2.14", optional = true }
torch = { version = ">=1.9", optional = true }
transformers = { version = ">=4.30", optional = true }
openai = { version = ">=1.0", optional = true }
anthropic = { version = ">=0.18", optional = true }
matplotlib = { version = ">=3.5", optional = true }
pyyaml = { version = ">=6.0", optional = true }
tqdm = { version = ">=4.60", optional = true }
aiohttp = { version = ">=3.9", optional = true }
tiktoken = { version = ">=0.7", optional = true }

[tool.poetry.extras]
bench = ["datasets"]
bench-full = ["datasets", "torch", "transformers"]
openai = ["openai"]
anthropic = ["anthropic"]
viz = ["matplotlib"]
config = ["pyyaml"]
progress = ["tqdm"]
proxy = ["aiohttp", "tiktoken"]
all = ["datasets", "torch", "transformers", "openai", "anthropic", "matplotlib", "pyyaml", "tqdm", "aiohttp", "tiktoken"]

[tool.poetry.scripts]
aip-bench = "aip_bench.cli:main"
aip-proxy = "aip_bench.proxy.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require torch+transformers (deselect with '-m \"not slow\"')",
]
