[tool.poetry]
name = "aip-bench-suite"
version = "0.1.0"
description = "Benchmarking suite for LLM hallucination detection, inference efficiency, and QA compression evaluation"
authors = ["Carmen Esteban"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/iafiscal1212/aip-bench"
homepage = "https://github.com/iafiscal1212/aip-bench"
keywords = ["benchmarking", "evaluation", "llm", "hallucination-detection", "kv-cache-compression"]
packages = [{include = "aip_bench", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.20"
scipy = ">=1.7"
# Core: proxy + basic utilities
openai = ">=1.0"
anthropic = ">=0.18"
aiohttp = ">=3.9"
tiktoken = ">=0.7"
pyyaml = ">=6.0"
tqdm = ">=4.60"

[tool.poetry.group.bench.dependencies]
datasets = ">=2.14"
torch = ">=1.9"
transformers = ">=4.30"

[tool.poetry.group.viz.dependencies]
matplotlib = ">=3.5"

[tool.poetry.scripts]
aip-bench = "aip_bench.cli:main"
aip-proxy = "aip_bench.proxy.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that require torch+transformers (deselect with '-m \"not slow\"')",
]
